--- a/app/views/interpreters/appointments.html.erb
+++ b/app/views/interpreters/appointments.html.erb
@@ -6,77 +6,97 @@
     <main class="flex-1 py-6">
       <div class="mx-auto max-w-7xl px-4 sm:px-6 md:px-6">
         <div class="px-4 sm:px-6 lg:px-6">
-        <div class="flex p-8 bg-white rounded shadow">
-          <h3>Appointments</h3>
+        <div class="flex p-8 bg-white rounded shadow font-bold text-xl capitalize">
+          <div>
+            <span id="timeframeTextContainer">All</span>
+            <span id="categoriesTextContainer"> </span>
+            Appointments
+          </div>
           <div class="ml-auto">
-            <button id="dropdownCheckboxButton" data-dropdown-toggle="categoriesDropdown" class="text-white bg-tokanisecondary-600 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2.5 text-center inline-flex items-center dark:bg-blue-600 dark:hover:bg-tokanisecondary-600 dark:focus:ring-blue-800" type="button">
-              Category
-              <svg class="w-4 h-4 ml-2" aria-hidden="true" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path></svg>
-            </button>
+            <span id="modalitiesTextContainer" class="text-gray-500">
+            </span>
+          </div>
+        </div>
+        <div class="flex pt-5">
+          <div class="ml-auto">
+            <div class="flex">
 
-            <!-- Dropdown menu -->
-            <div id="categoriesDropdown" class="z-10 hidden bg-white divide-y divide-gray-100 rounded-lg shadow dark:bg-gray-700 dark:divide-gray-600">
-              <div data-interpreter-appointments-target="status">
-                <% @statuses.each do |category| %>
-                    <div class="flex items-center p-2 rounded hover:bg-gray-100 dark:hover:bg-gray-600 py-3 px-3">
-                      <input name="status" class="<%= dropdown_item_classes %>" type="radio" id="category_<%= category %>" value="<%= category %>" data-action="change->interpreter-appointments#changed">
-                      <label class="form-check-label <%= label_classes %>" for="category_<%= category %>"><%= category.titleize %></label>
+              <div data-controller="dropdown" class="pr-3">
+                <button data-action="click->dropdown#toggle click@window->dropdown#hide touch->dropdown#toggle touch@window->dropdown#hide" role="button" class="inline-flex items-center select-none" aria-label="Profile Menu">
+                  <p class="text-sm">Category</p>
+                  <svg class="w-4 h-4 ml-2 text-gray-500" aria-hidden="true" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path></svg>
+                </button>
+                <div data-dropdown-target="menu" class="hidden absolute z-10 bg-white divide-y divide-gray-100 rounded-lg shadow dark:bg-gray-700 dark:divide-gray-600 block">
+                  <div class="overflow-hidden bg-white border border-gray-200 rounded shadow-md">
+                    <div data-interpreter-appointments-target="status">
+                      <% @statuses.each do |category| %>
+                        <div class="flex items-center p-2 rounded hover:bg-gray-100 dark:hover:bg-gray-600 py-3 px-3">
+                          <input name="status" class="<%= dropdown_item_classes %>" type="radio" id="category_<%= category %>" value="<%= category %>" data-action="change->interpreter-appointments#changed change->interpreter-appointments#updateCurrentFilterText" data-category-filter="<%= category %>">
+                          <label class="form-check-label <%= label_classes %>" for="category_<%= category %>"><%= category.titleize %></label>
+                        </div>
+                      <% end %>
                     </div>
-                <% end %>
-              </div>
-            </div>
-
-            <button id="dropdownCheckboxButton" data-dropdown-toggle="displayRangesDropdown" class="text-white bg-tokanisecondary-600 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2.5 text-center inline-flex items-center dark:bg-blue-600 dark:hover:bg-tokanisecondary-600 dark:focus:ring-blue-800" type="button">
-              Timeframe
-              <svg class="w-4 h-4 ml-2" aria-hidden="true" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path></svg>
-            </button>
-
-            <!-- Dropdown menu -->
-            <div id="displayRangesDropdown" class="z-10 hidden bg-white divide-y divide-gray-100 rounded-lg shadow dark:bg-gray-700 dark:divide-gray-600">
-              <div data-interpreter-appointments-target="displayRange">
-                <% @timeframes.each do |timeframe| %>
-                  <div class="flex items-center p-2 rounded hover:bg-gray-100 dark:hover:bg-gray-600 py-3 px-3">
-                    <input name="display_range" class="<%= dropdown_item_classes %>" type="checkbox" id="timeframe_<%= timeframe %>" value="<%= timeframe %>" data-action="change->interpreter-appointments#changed">
-                    <label class="form-check-label <%= label_classes %>" for="timeframe_<%= timeframe %>"><%= timeframe.titleize %></label>
-                  </div>
-                <% end %>
-                <!-- Nested dropdown -->
-                <button id="doubleDropdownButton" data-dropdown-toggle="doubleDropdown" data-dropdown-placement="right-start" type="button" class="flex items-center justify-between w-full px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">
-                  <p class="<%= label_classes %>">Date Range</p>
-                <svg aria-hidden="true" class="w-4 h-4" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z" clip-rule="evenodd"></path></svg></button>
-                <div id="doubleDropdown" class="z-10 hidden bg-white divide-y divide-gray-100 rounded-lg shadow dark:bg-gray-700">
-                  <div class="items-center p-2 rounded hover:bg-gray-100 dark:hover:bg-gray-600 py-3 px-3">
-                    <label for="start-date" class="block font-medium text-gray-700 mt-2">Start Date</label>
-                    <input type="date" name="start_date" id="start-date" class="inline-block w-1/8 rounded-md border-gray-300 focus:border-indigo-500 focus:ring-indigo-500" data-action="change->interpreter-appointments#changed">
-                  </div>
-                  <div class="items-center p-2 rounded hover:bg-gray-100 dark:hover:bg-gray-600 py-3 px-3">
-                    <label for="end-date" class="block font-medium text-gray-700 mt-2">End Date</label>
-                    <input type="date" name="end_date" id="end-date" class="inline-block w-1/8 rounded-md border-gray-300 focus:border-indigo-500 focus:ring-indigo-500" data-action="change->interpreter-appointments#changed">
                   </div>
                 </div>
               </div>
-            </div>
 
-
-            <button id="dropdownCheckboxButton" data-dropdown-toggle="modalitiesDropdown" class="text-white bg-tokanisecondary-600 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2.5 text-center inline-flex items-center dark:bg-blue-600 dark:hover:bg-tokanisecondary-600 dark:focus:ring-blue-800" type="button">
-              Modalities
-              <svg class="w-4 h-4 ml-2" aria-hidden="true" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path></svg>
-            </button>
-
-            <!-- Dropdown menu -->
-            <div id="modalitiesDropdown" class="z-10 hidden bg-white divide-y divide-gray-100 rounded-lg shadow dark:bg-gray-700 dark:divide-gray-600">
-              <div data-interpreter-appointments-target="modality">
-                <% @modalities.each do |modality| %>
-                  <div class="flex items-center p-2 rounded hover:bg-gray-100 dark:hover:bg-gray-600 py-3 px-3">
-                    <input name="modality_<%= modality %>" class="<%= dropdown_item_classes %>" type="checkbox" id="modality_<%= modality %>" value="<%= modality %>" data-action="change->interpreter-appointments#changed">
-                    <label class="form-check-label <%= label_classes %>" for="modality_<%= modality %>"><%= modality.titleize %></label>
+              <div data-controller="dropdown" class="pr-3">
+                <button data-action="click->dropdown#toggle click@window->dropdown#hide touch->dropdown#toggle touch@window->dropdown#hide" role="button" class="inline-flex items-center select-none" aria-label="Profile Menu">
+                  <p class="text-sm">Timeframe</p>
+                  <svg class="w-4 h-4 ml-2 text-gray-500" aria-hidden="true" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path></svg>
+                </button>
+                <div data-dropdown-target="menu" class="hidden absolute z-10 bg-white divide-y divide-gray-100 rounded-lg shadow dark:bg-gray-700 dark:divide-gray-600 block">
+                  <div class="overflow-hidden bg-white border border-gray-200 rounded shadow-md">
+                    <div data-interpreter-appointments-target="displayRange">
+                      <% @timeframes.each do |timeframe| %>
+                        <div class="flex items-center p-2 rounded hover:bg-gray-100 dark:hover:bg-gray-600 py-3 px-3">
+                          <input name="display_range" class="<%= dropdown_item_classes %>" type="checkbox" id="timeframe_<%= timeframe %>" value="<%= timeframe %>" data-action="change->interpreter-appointments#changed change->interpreter-appointments#toggleCurrentTimeFilterText" data-time-filter="<%= timeframe %>">
+                          <label class="form-check-label <%= label_classes %>" for="timeframe_<%= timeframe %>"><%= timeframe.titleize %></label>
+                        </div>
+                      <% end %>
+                      <div class="pr-3">
+                        <div data-action="click->interpreter-appointments#toggleNestedDropdown" role="button" class="flex items-center py-3 px-3" aria-label="Profile Menu">
+                          <p class="text-sm">Date Range</p>
+                          <svg class="w-4 h-4 ml-2 text-gray-500" aria-hidden="true" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path></svg>
+                        </div>
+                        <div class="nestedDropdown hidden absolute mt-1 top-full z-10 bg-white divide-y divide-gray-100 rounded-lg shadow dark:bg-gray-700 dark:divide-gray-600 block">
+                          <div class="overflow-hidden bg-white border border-gray-200 rounded shadow-md">
+                            <div class="items-center p-2 rounded hover:bg-gray-100 dark:hover:bg-gray-600 py-3 px-3">
+                              <label for="start-date" class="block font-medium text-gray-700 mt-2">Start Date</label>
+                              <input type="date" name="start_date" id="start-date" class="inline-block w-1/8 rounded-md border-gray-300 focus:border-indigo-500 focus:ring-indigo-500" data-action="change->interpreter-appointments#changed">
+                            </div>
+                            <div class="items-center p-2 rounded hover:bg-gray-100 dark:hover:bg-gray-600 py-3 px-3">
+                              <label for="end-date" class="block font-medium text-gray-700 mt-2">End Date</label>
+                              <input type="date" name="end_date" id="end-date" class="inline-block w-1/8 rounded-md border-gray-300 focus:border-indigo-500 focus:ring-indigo-500" data-action="change->interpreter-appointments#changed">
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
                   </div>
-                <% end %>
+                </div>
               </div>
+
+              <div data-controller="dropdown" class="pr-3">
+                <button data-action="click->dropdown#toggle click@window->dropdown#hide touch->dropdown#toggle touch@window->dropdown#hide" role="button" class="inline-flex items-center select-none" aria-label="Profile Menu">
+                  <p class="text-sm">Modality</p>
+                  <svg class="w-4 h-4 ml-2 text-gray-500" aria-hidden="true" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path></svg>
+                </button>
+                <div data-dropdown-target="menu" class="hidden absolute z-10 bg-white divide-y divide-gray-100 rounded-lg shadow dark:bg-gray-700 dark:divide-gray-600 block">
+                  <div class="overflow-hidden bg-white border border-gray-200 rounded shadow-md">
+                    <div data-interpreter-appointments-target="modality">
+                      <% @modalities.each do |modality| %>
+                        <div class="flex items-center p-2 rounded hover:bg-gray-100 dark:hover:bg-gray-600 py-3 px-3">
+                          <input name="modality_<%= modality %>" class="<%= dropdown_item_classes %>" type="checkbox" id="modality_<%= modality %>" value="<%= modality %>" data-action="change->interpreter-appointments#changed change->interpreter-appointments#toggleModalityFilterText">
+                          <label class="form-check-label <%= label_classes %>" for="modality_<%= modality %>"><%= modality.titleize %></label>
+                        </div>
+                      <% end %>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
             </div>
-
-
-
           </div>
         </div>
         <div class="mt-8 flex flex-col">
