--- a/app/views/dashboard/_customer.html.erb
+++ b/app/views/dashboard/_customer.html.erb
@@ -52,7 +52,7 @@
                 </div>
                 <div class="bg-gray-50 px-5 py-3">
                   <div class="text-sm">
-                    <a href="#" class="font-medium text-cyan-700 hover:text-cyan-900">View all</a>
+                    <a href="#" class="font-medium text-cyan-700 hover:text-cyan-900 p-2">View all</a>
                   </div>
                 </div>
               </div>
@@ -78,7 +78,7 @@
                 </div>
                 <div class="bg-gray-50 px-5 py-3">
                   <div class="text-sm">
-                    <a href="#" class="font-medium text-cyan-700 hover:text-cyan-900">View all</a>
+                    <a href="#" class="font-medium text-cyan-700 hover:text-cyan-900 p-2">View all</a>
                   </div>
                 </div>
               </div>
@@ -104,7 +104,7 @@
                 </div>
                 <div class="bg-gray-50 px-5 py-3">
                   <div class="text-sm">
-                    <a href="#" class="font-medium text-cyan-700 hover:text-cyan-900">View all</a>
+                    <a href="#" class="font-medium text-cyan-700 hover:text-cyan-900 p-2">View all</a>
                   </div>
                 </div>
               </div>
