--- a/app/views/requestors/_form.html.erb
+++ b/app/views/requestors/_form.html.erb
@@ -28,12 +28,14 @@
                 <%= requestor_detail.label :work_phone, class: "block text-sm font-medium text-gray-700" %>
                 <%= requestor_detail.text_field :work_phone, class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm" %>
               </div>
-              <div class="sm:col-span-6 lg:col-span-3">
-                <div class="form-group">
-                  <%= requestor_detail.label "Requestor Type*", class: "block text-sm font-medium text-gray-700" %>
-                  <%= requestor_detail.select :requestor_type, options_for_select(requestor_type_options, requestor.requestor_detail.requestor_type), {}, class: "form-control focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-s" %>
+              <% unless customer_logged_in? %>
+                <div class="sm:col-span-6 lg:col-span-3">
+                  <div class="form-group">
+                    <%= requestor_detail.label "Requestor Type*", class: "block text-sm font-medium text-gray-700" %>
+                    <%= requestor_detail.select :requestor_type, options_for_select(requestor_type_options, requestor.requestor_detail.requestor_type), {}, class: "form-control focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-s" %>
+                  </div>
                 </div>
-              </div>
+              <% end %>
               <div class="col-span-6 sm:col-span-6" data-controller="select-group">
                 <% unless customer_logged_in? %>
                   <div class="col-span-3 sm:col-span-3">
