--- a/app/views/agencies/account_process_invoices.html.erb
+++ b/app/views/agencies/account_process_invoices.html.erb
@@ -39,6 +39,31 @@
 								</div>
 							</fieldset>
 						</div>
+
+            <div class="row mt-4 mb-3 hidden" data-process-batches-target="customers">
+              <div class="col-7 form-check border rounded-2 border-grey border-2 mb-3 ps-5 mx-3" style="height:40vh; overflow-y:auto">
+                <%  @customers.each do |customer| %>
+                  <div class="ml-4">
+                    <%= check_box_tag 'process_batch[customer_ids][]', customer.id, false, class: "form-check-input" %>
+                    <%= customer.name %>
+                    <br>
+                  </div>
+                <% end %>
+              </div>
+            </div>
+
+            <div class="row mt-4 mb-3 hidden" data-process-batches-target="interpreters">
+              <div class="col-7 form-check border rounded-2 border-grey border-2 mb-3 ps-5 mx-3" style="height:40vh; overflow-y:auto">
+                <%  @interpreters.each do |interpreter| %>
+                  <div class="ml-4">
+                    <%= check_box_tag 'process_batch[interpreter_ids][]', interpreter.id, false, class: "form-check-input" %>
+                    <%= interpreter.name %>
+                    <br>
+                  </div>
+                <% end %>
+              </div>
+            </div>
+
 						<div class="flex mt-5">
 							<button type="submit" class="ml-3 inline-flex justify-center rounded-md border border-transparent bg-tokanisecondary-600 py-2 px-4 text-md font-medium text-white shadow-sm hover:bg-tokanisecondary-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2 btn btn-large">PROCESS</button>
 						</div>
