--- a/app/views/interpreters/appointments.html.erb
+++ b/app/views/interpreters/appointments.html.erb
@@ -7,7 +7,7 @@
       <div class="py-6">
         <div class="mx-auto max-w-7xl px-4 sm:px-6 md:px-6">
           <div class="px-4 sm:px-6 lg:px-8">
-            <%= form_with url: appointments_interpreters_path, class: 'form', method: :get, data: { turbo_frame: "interpreter_appointments", turbo_action: "advance", target: "interpreter-appointments.form", interpreter_appointments_target: "form" } do |f| %>
+            <%= form_with url: appointments_interpreters_path, class: 'form', method: :get, data: { turbo_frame: "interpreter_appointments", turbo_action: "advance", target: "interpreter-appointments.form", interpreter_appointments_target: "form", action: "input->interpreter-appointments#submit"  } do |f| %>
               <div class="sm:flex sm:items-center">
                 <div class="ml-auto">
                   <div class="flex flex-wrap items-center">
@@ -97,6 +97,10 @@
                             style: "border-top-left-radius:0.5rem;border-bottom-left-radius:0.5rem;" %>
                           </label>
                         </div>
+                      </div>
+
+                      <div class="pr-3 relative">
+                        <%= text_field_tag :search_query, nil, placeholder: "Search", class: "inline-block rounded-md border border-gray-200 outline-none px-3 py-2 ml-3 w-full" %>
                       </div>
                     </div>
                   </div>
