--- a/app/views/interpreters/availability.html.erb
+++ b/app/views/interpreters/availability.html.erb
@@ -10,7 +10,7 @@
               <div class="flex flex-wrap">
                 <div>
                   <div>
-                    <%= link_to update_timezone_view_interpreters_path, class: "mt-3 inline-flex w-full items-center justify-center rounded-lg border border-transparent bg-tokanisecondary-600 px-4 py-2 font-medium text-white shadow-sm hover:bg-tokanisecondary-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2 sm:mt-0 sm:w-auto sm:text-sm", data: { turbo_frame: "update_timezone_view" } do %>
+                    <%= link_to update_timezone_view_interpreters_path, class: "inline-flex items-center justify-center rounded-lg border bg-transparent border-tokaniprimary-600 py-2 px-3.5 text-sm font-medium text-tokaniprimary-600 shadow-sm hover:bg-tokaniprimary-600 hover:text-white focus:outline-none", data: { turbo_frame: "update_timezone_view" } do %>
                       <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                         <path stroke-linecap="round" stroke-linejoin="round" d="M12 6v6h4.5m4.5 0a9 9 0 11-18 0 9 9 0 0118 0z" />
                       </svg>
