--- a/app/views/interpreter_details/_interpreter_detail.html.erb
+++ b/app/views/interpreter_details/_interpreter_detail.html.erb
@@ -1,5 +1,5 @@
 <div id="<%= dom_id interpreter_detail %>">
-  <% Array.wrap(@interpreter_detail_fields.)each do |field| %>
+  <% Array.wrap(@interpreter_detail_fields).each do |field| %>
     <div class="grid md:grid-cols-3 py-5 text-gray-500 border-t border-gray-200">
       <div>
         <p><%= field.titleize %></p>
