--- a/app/views/agencies/agency_detail_form.html.erb
+++ b/app/views/agencies/agency_detail_form.html.erb
@@ -31,7 +31,8 @@
                       <div class="sm:col-span-3">
                         <label for="last-name" class="block text-sm font-medium text-gray-700">Company website *</label>
                         <div class="mt-1">
-                          <%= agency_detail.text_field :company_website, class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm", placeholder: "ex. www.yourcompany.com" %>
+                          <%= agency_detail.text_field :company_website, class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm", placeholder: "https://google.com", value:"#{@agency.agency_detail.nil? ? 'https://' : @agency.agency_detail.company_website}" %>
+                          <p class="text-sm">ex. https://www.yourcompany.com</p>
                         </div>
                       </div>
                     <% end %>
